--- a/NodeJS and Dependency Management/package.json
+++ b/NodeJS and Dependency Management/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "fs-extra": "^10.1.0"
+  }
 }
